more chat features + fixed some ui
dark mode and light mode was not showing up in nav bar fixed it now

--- a/public/css/pricing.css
+++ b/public/css/pricing.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color : rgb(4, 4, 87);
+    
 }
 
 .Pricing-info {
