--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -134,7 +134,7 @@ html.light-mode {
 
 html {
     background-color: var(--bg-main);
-    color: var(--text-main);
+    /*color: var(--text-main);*/
     transition: background-color 0.2s ease, color 0.3s ease;
 }
 
